2013-07-01  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	operation/agentes/stat_win.php: Fix string type graph colors
	and data. Fix the "Avg only" option because is forced to "true".
	Bug: 2284

2013-07-01 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/menu.php, include/functions_menu.php: fixed the entry
	gis map in ACL enterprise.
	
	* index.php: cleaned source code style.

2013-07-01  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql: Added to default actions 
	some default values to avoid confusion in a clean installation

2013-06-27 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/servers/plugin.php, godmode/setup/file_manager.php,
	include/functions_filemanager.php: added the filemanager to server
	plugin, and of course change the code for to make this feature.
	
	MERGED FROM THE BRANCH PANDORA_4_0

2013-06-26 Miguel de Dios <miguel.dedios@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: added the new
	columns in the table "talert_snmp".

2013-06-26  Ramon Novoa  <rnovoa@artica.es>

	* pandora_console.spec,
	  pandora_console.redhat.spec: Fixed directory permissions.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php,
	include/functions_agents.php: fixed the operations with the ip or
	ips adress of agent.
	
	MERGED FROM THE BRANCH PANDORA_4_0

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/menu.php: fixed the default value for refresh in the
	extensions.
	
	Fixes: #2310
	
	* include/functions_extensions.php: cleaned source code style.

2013-06-25 Miguel de Dios <miguel.dedios@artica.es>

	* operation/users/user_edit.php: fixed the "home page" for user,
	now it does show ugly 0, show correct the dashboard and
	visualmap and can set other.
